# uncover

./: .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml
.github/workflows/: ci.yml
benches/: README.md  framework.rs
docs/: package.json
docs/.vitepress/: config.ts
docs/.vitepress/theme/: index.ts
docs/docs/explanations/: middleware.md  project-structure.md  responses.md  routes.md
docs/docs/get-started/: installation.md
docs/docs/tutorials/: by-example.md
examples/: .gitignore  README.md
examples/api/: Cargo.toml  README.md
examples/api/src/: main.rs
examples/auth-example/: Cargo.toml
examples/auth-example/src/: main.rs
examples/auth-jwt/: .env.example  .gitignore
examples/hello-api/: README.md
examples/hello-api/src/: main.rs
examples/hello-world/: Cargo.toml
examples/live-reload/: Cargo.toml  run.sh
examples/live-reload/src/: main.rs
examples/nested-services/: Cargo.toml
examples/nested-services/public/: index.html
examples/nested-services/src/: main.rs
examples/routes/: Cargo.toml
examples/routes/src/: main.rs
examples/validation-example/: Cargo.toml
scripts/: run_benchmarks.sh
src/: lib.rs  prelude.rs
src/api/: api.rs  mod.rs  response.rs
src/config/: logging.rs  meta.rs
src/context/: context.rs  mod.rs
src/logging/: mod.rs
src/middleware/: auth.rs  mod.rs  rate_limit.rs  request_id.rs
src/openapi/: config.rs  docs.rs  mod.rs
src/server/: builder.rs  endpoint.rs  mod.rs  params.rs  router.rs
src/static/: docs.html
src/testing/: client.rs  mod.rs  request.rs  response.rs
(+12 files in other folders)
