[package]
name = "nested-services"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
uncovr = { path = "../.." }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
